--- a/Assignment_02.ipynb
+++ b/Assignment_02.ipynb
@@ -18,6 +18,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "56e2967f",
+   "metadata": {},
+   "source": [
+    "<h1>Name: Paul Adesola</h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d3ad25f",
+   "metadata": {},
+   "source": [
+    "<h1> Student No. : u04897294 </h1>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "e2242c62",
